--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "20.5.9",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "@types/swiper": "^6.0.0",
     "aos": "^2.3.4",
     "autoprefixer": "10.4.15",
     "eslint": "8.48.0",
@@ -24,6 +25,7 @@
     "react-icons": "^4.11.0",
     "react-parallax-tilt": "^1.7.165",
     "react-simple-typewriter": "^5.0.1",
+    "swiper": "^10.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   }
